Updated fixtures scripts and data, changed directory structure in templatetags to work on all systems.

--- a/ArcsSystem/data/publications/csv_to_xml.ipynb
+++ b/ArcsSystem/data/publications/csv_to_xml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "16"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -4028,13 +4028,7 @@
       "gur game\n",
       "1971\n",
       "participatory crowdsourcing\n",
-      "1972\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1972\n",
       "quality-of-information\n",
       "1973\n",
       "protected area management\n",
@@ -4277,7 +4271,13 @@
       "2092\n",
       "e-geoscience\n",
       "2093\n",
-      "streamgaging\n",
+      "streamgaging\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2094\n",
       "south africa\n",
       "2095\n",
@@ -8961,13 +8961,7 @@
       "4434\n",
       "molecular biology\n",
       "4435\n",
-      "warning system\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "warning system\n",
       "4436\n",
       "global integrated gis platform\n",
       "4437\n",
@@ -9059,7 +9053,13 @@
       "4480\n",
       "extension\n",
       "4481\n",
-      "mobile phone\n",
+      "mobile phone\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "4482\n",
       "plant disease diagnosis\n",
       "4483\n",
@@ -11929,13 +11929,13 @@
     "for k, v in keyworddict.items():\n",
     "    print(str(v))\n",
     "    print(escape(k))\n",
-    "    xmloutputfile.write('''<object model=\"publications.keyword\" pk=\"''' + str(v) + '''\">''')\n",
+    "    xmloutputfile.write('''<object model=\"projects.keywordeng\" pk=\"''' + str(v) + '''\">''')\n",
     "    xmloutputfile.write('''   <field name=\"keyword\" type=\"TextField\">''' + escape(k) + '''</field>\\n</object>''')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -16053,13 +16053,7 @@
       "8\n",
       "75\n",
       "1028\n",
-      "1310\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1310\n",
       "1311\n",
       "1312\n",
       "98\n",
@@ -16079,7 +16073,13 @@
       "122\n",
       "90\n",
       "163\n",
-      "8\n",
+      "8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "470\n",
       "75\n",
       "536\n",
@@ -20108,13 +20108,7 @@
       "Transformative Science - Driving Force for Good Science and a Living Democracy\n",
       "Transforming a school learning exercise into a public engagement event: 'The Good, the Bad and The Algae'\n",
       "Transforming Spaces: A Framework for the Identification and Analysis of Adolescents' No-Go Areas in Vienna\n",
-      "Trends and key elements in community-based monitoring: a systematic review of the literature with an emphasis on Arctic and Subarctic regions\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Trends and key elements in community-based monitoring: a systematic review of the literature with an emphasis on Arctic and Subarctic regions\n",
       "Trends in the use of private gardens by wild birds in Great Britain 1995-2002\n",
       "Trends, challenges, and responses of a 20-year, volunteer water monitoring program in Alabama\n",
       "Tribute to Tinbergen: Public Engagement in Ethology\n",
@@ -20356,7 +20350,13 @@
       "76\n",
       "2423\n",
       "477\n",
-      "User's Guide for Evaluating Learning Outcomes in Citizen Science\n",
+      "User's Guide for Evaluating Learning Outcomes in Citizen Science\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Uses and Biases of Volunteer Water Quality Data\n",
       "Uses of Public Participation Geographic Information Systems Applications in E-Government\n",
       "33\n",
@@ -24835,13 +24835,7 @@
       "487\n",
       "Land use modeling in North Rhine-Westphalia with interaction and scaling laws\n",
       "8\n",
-      "Using OpenStreetMap data to assist in the creation of LCZ maps\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Using OpenStreetMap data to assist in the creation of LCZ maps\n",
       "179\n",
       "178\n",
       "8\n",
@@ -25090,7 +25084,13 @@
       "8\n",
       "3904\n",
       "2087\n",
-      "Mapping transit accessibility: Possibilities for public participation\n",
+      "Mapping transit accessibility: Possibilities for public participation\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "147\n",
       "53\n",
       "8\n",
@@ -29569,13 +29569,7 @@
       "8\n",
       "4681\n",
       "5213\n",
-      "5478\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "5478\n",
       "OSM Data Import as an Outreach Tool to Trigger Community Growth? A Case Study in Miami\n",
       "198\n",
       "179\n",
@@ -30095,7 +30089,13 @@
       "8\n",
       "5632\n",
       "2345\n",
-      "5633\n",
+      "5633\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "5634\n",
       "5635\n",
       "Citizen Sensing for Improved Urban Environmental Monitoring\n",
@@ -31210,7 +31210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
