Fixed replacement of forwardslash to ampersand in the keywords.

--- a/ArcsSystem/data/publications/csv_to_xml.ipynb
+++ b/ArcsSystem/data/publications/csv_to_xml.ipynb
@@ -13,6 +13,13 @@
     "from xml.sax.saxutils import escape\n",
     "\n",
     "\n",
+    "def replaceslash(keyword):\n",
+    "    if \"/\" in keyword:\n",
+    "        return keyword.replace(\"/\", \"&amp;\")\n",
+    "    else:\n",
+    "        return(keyword)\n",
+    "        \n",
+    "\n",
     "def parsecsv():\n",
     "    with open('ARCSLiterature.csv', 'r') as thefile:\n",
     "        data = csv.DictReader(thefile, delimiter=',', quotechar='\"')\n",
@@ -2287,14 +2294,14 @@
       "norway 20\n",
       "common carp 81110\n",
       "house finch 25170208\n",
-      "epidemic 44512\n"
+      "epidemic 44512\n",
+      "mycoplasma gallisepticum 150185\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mycoplasma gallisepticum 150185\n",
       "mycoplasma 210975\n",
       "social network analysis 7551269\n",
       "oak processionary 261008\n",
@@ -3170,7 +3177,7 @@
       "210\n",
       "mashup\n",
       "211\n",
-      "spatial publish/subscribe\n",
+      "spatial publish&amp;subscribe\n",
       "212\n",
       "osm\n",
       "213\n",
@@ -5444,7 +5451,7 @@
       "1347\n",
       "hydraulic modeling\n",
       "1348\n",
-      "land use/land cover classification\n",
+      "land use&amp;land cover classification\n",
       "1349\n",
       "vertical vegetation structure\n",
       "1350\n",
@@ -5794,7 +5801,13 @@
       "1522\n",
       "adaption and development planning\n",
       "1523\n",
-      "johannesburg\n",
+      "johannesburg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1524\n",
       "policy response\n",
       "1525\n",
@@ -6386,7 +6399,7 @@
       "1818\n",
       "environmental science\n",
       "1819\n",
-      "monitoring/mapping\n",
+      "monitoring&amp;mapping\n",
       "1820\n",
       "nutrient cycling\n",
       "1821\n",
@@ -7099,13 +7112,7 @@
       "moose\n",
       "2175\n",
       "social activities\n",
-      "2176\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2176\n",
       "ungulates\n",
       "2177\n",
       "botanical education\n",
@@ -8598,7 +8605,7 @@
       "2921\n",
       "public participation in scientific research (ppsr)\n",
       "2922\n",
-      "habitats directive 92/43/eec\n",
+      "habitats directive 92&amp;43&amp;eec\n",
       "2923\n",
       "management policies\n",
       "2924\n",
@@ -8702,7 +8709,7 @@
       "2973\n",
       "globeland30\n",
       "2974\n",
-      "land use/land cover mapping\n",
+      "land use&amp;land cover mapping\n",
       "2975\n",
       "urban atlas\n",
       "2976\n",
@@ -9032,7 +9039,13 @@
       "3138\n",
       "passerine salmonellosis\n",
       "3139\n",
-      "knowing community\n",
+      "knowing community\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "3140\n",
       "knowledge artifact\n",
       "3141\n",
@@ -9850,7 +9863,7 @@
       "3547\n",
       "inconsistencies\n",
       "3548\n",
-      "land use/cover map\n",
+      "land use&amp;cover map\n",
       "3549\n",
       "consumer\n",
       "3550\n",
@@ -10176,7 +10189,7 @@
       "3710\n",
       "data retrieval\n",
       "3711\n",
-      "susceptibility/hazard and risk maps\n",
+      "susceptibility&amp;hazard and risk maps\n",
       "3712\n",
       "2011 great east japan earthquake\n",
       "3713\n",
@@ -11198,7 +11211,7 @@
       "4221\n",
       "rapid socioeconomic growth\n",
       "4222\n",
-      "tencent/baidu street views\n",
+      "tencent&amp;baidu street views\n",
       "4223\n",
       "debris disk\n",
       "4224\n",
@@ -11605,13 +11618,7 @@
       "dynamic cluster mapping\n",
       "4425\n",
       "economic landscape\n",
-      "4426\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "4426\n",
       "historical navigation\n",
       "4427\n",
       "mapping religious networks\n",
@@ -12546,7 +12553,13 @@
       "4892\n",
       "aversive conditioning\n",
       "4893\n",
-      "colorado\n",
+      "colorado\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "4894\n",
       "coyote\n",
       "4895\n",
@@ -13658,7 +13671,7 @@
       "5448\n",
       "resilient schools\n",
       "5449\n",
-      "end 49/2002\n",
+      "end 49&amp;2002\n",
       "5450\n",
       "noise pollution\n",
       "5451\n",
@@ -14114,7 +14127,7 @@
       "5676\n",
       "biodiversity information\n",
       "5677\n",
-      "biodiversity observation/recording\n",
+      "biodiversity observation&amp;recording\n",
       "5678\n",
       "biodiversity portal\n",
       "5679\n",
@@ -14148,7 +14161,7 @@
       "5693\n",
       "nitrogen\n",
       "5694\n",
-      "herbig ae/be\n",
+      "herbig ae&amp;be\n",
       "5695\n",
       "pre-main-sequence\n",
       "5696\n",
@@ -14456,7 +14469,7 @@
       "5847\n",
       "cetacean\n",
       "5848\n",
-      "ecologically/biologically significant areas\n",
+      "ecologically&amp;biologically significant areas\n",
       "5849\n",
       "kriging\n",
       "5850\n",
@@ -14598,9 +14611,9 @@
     "\n",
     "for k, v in keyworddict.items():\n",
     "    print(str(v))\n",
-    "    print(escape(k))\n",
+    "    print(replaceslash(escape(k)))\n",
     "    xmloutputfile.write('''<object model=\"projects.keywordeng\" pk=\"''' + str(v) + '''\">''')\n",
-    "    xmloutputfile.write('''   <field name=\"keyword\" type=\"TextField\">''' + escape(k) + '''</field>''')\n",
+    "    xmloutputfile.write('''   <field name=\"keyword\" type=\"TextField\">''' + replaceslash(escape(k)) + '''</field>''')\n",
     "    if k in summarydict:\n",
     "        xmloutputfile.write('''   <field name=\"summary_en\" type=\"CharField\">''' + escape(summarydict[k]) + '''</field>''')\n",
     "    else:\n",
@@ -14624,7 +14637,7 @@
     "# add swedish keywords\n",
     "for k, v in swedish_kw_dict.items():\n",
     "    xmloutputfile.write('''<object model=\"projects.keywordswe\" pk=\"''' + str(v) + '''\">''')\n",
-    "    xmloutputfile.write('''   <field name=\"keyword\" type=\"TextField\">''' + escape(k) + '''</field>''')\n",
+    "    xmloutputfile.write('''   <field name=\"keyword\" type=\"TextField\">''' + replaceslash(escape(k)) + '''</field>''')\n",
     "    xmloutputfile.write('''</object>''')"
    ]
   },
@@ -17611,7 +17624,13 @@
       "1014\n",
       "1015\n",
       "1016\n",
-      "Crowdsourcing Crop Improvement in Sub-Saharan Africa: A Proposal for a Scalable and Inclusive Approach to Food Security\n",
+      "Crowdsourcing Crop Improvement in Sub-Saharan Africa: A Proposal for a Scalable and Inclusive Approach to Food Security\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "33\n",
       "141\n",
       "73\n",
@@ -18662,13 +18681,7 @@
       "1285\n",
       "1286\n",
       "Focal Plant Observations as a Standardised Method for Pollinator Monitoring: Opportunities and Limitations for Mass Participation Citizen Science\n",
-      "8\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "8\n",
       "Focal Plant Observations as a Standardised Method for Pollinator Monitoring: Opportunities and Limitations for Mass Participation Citizen Science (vol 11, e0150794, 2016)\n",
       "Food, publics, science\n",
       "Footprints of Fascination: Digital Traces of Public Engagement with Particle Physics on CERN's Social Media Platforms\n",
@@ -21269,7 +21282,13 @@
       "Reconstructing Velocities of Migrating Birds from Weather Radar - A Case Study in Computational Sustainability\n",
       "8\n",
       "Recording birds in real time: a convenient method for frequent bird recording\n",
-      "Recovery Plan for the Endangered Taxonomy Profession\n",
+      "Recovery Plan for the Endangered Taxonomy Profession\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Recreation shapes a \"landscape of fear\" for a threatened forest bird species in Central Europe\n",
       "Recreational fisheries in the UK: natural capital, ecosystem services, threats, and management\n",
       "Redesigning the architecture of policy-making: Engaging with Mori on nanotechnology in New Zealand\n",
@@ -22668,13 +22687,7 @@
       "2320\n",
       "2321\n",
       "227\n",
-      "228\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "228\n",
       "The Visualisation of Ecological Networks, and Their Use as a Tool for Engagement, Advocacy and Management\n",
       "8\n",
       "The Volunteer Monitor's Guide To Quality Assurance Project Plans\n",
@@ -24768,7 +24781,13 @@
       "2618\n",
       "2968\n",
       "8\n",
-      "SmartFluo: A Method and Affordable Adapter to Measure Chlorophyll a Fluorescence with Smartphones\n",
+      "SmartFluo: A Method and Affordable Adapter to Measure Chlorophyll a Fluorescence with Smartphones\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0\n",
       "2969\n",
       "2970\n",
@@ -27173,13 +27192,7 @@
       "Exposing the Science in Citizen Science: Fitness to Purpose and Intentional Design\n",
       "23\n",
       "161\n",
-      "19\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "19\n",
       "8\n",
       "1260\n",
       "2577\n",
@@ -28650,7 +28663,13 @@
       "4328\n",
       "4329\n",
       "4330\n",
-      "CITIZENS AS SENSORS FOR CRISIS EVENTS: SENSOR WEB ENABLEMENT FOR VOLUNTEERED GEOGRAPHIC INFORMATION\n",
+      "CITIZENS AS SENSORS FOR CRISIS EVENTS: SENSOR WEB ENABLEMENT FOR VOLUNTEERED GEOGRAPHIC INFORMATION\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "178\n",
       "8\n",
       "4331\n",
@@ -31679,13 +31698,7 @@
       "Citizen science regarding invasive lionfish in Dutch Caribbean MPAs: Drivers and barriers to participation\n",
       "0\n",
       "926\n",
-      "72\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "72\n",
       "412\n",
       "8\n",
       "5338\n",
@@ -33187,7 +33200,13 @@
       "Designing a Diving Protocol for Thermocline Identification Using Dive Computers in Marine Citizen Science\n",
       "8\n",
       "5754\n",
-      "5755\n",
+      "5755\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "5756\n",
       "5757\n",
       "Using Open Street Map Data in Environmental Exposure Assessment Studies: Eastern Massachusetts, Bern Region, and South Israel as a Case Study\n",
