--- a/ArcsSystem/locale/sv_SE/LC_MESSAGES/django.po
+++ b/ArcsSystem/locale/sv_SE/LC_MESSAGES/django.po
@@ -7,9 +7,6 @@
 #: templates/base.html:276 templates/base.html:281 templates/base.html:286
 #: templates/base.html:291 templates/base.html:334
 #: templates/blog/blog_detail.html:33 templates/home.html:15
-#: templates/search_results.html:252 templates/search_results.html:255
-#: templates/search_results.html:258 templates/search_results.html:261
-#: templates/search_results.html:316
 #: templates/staticpages/static_variant1.html:31
 #: templates/staticpages/static_variant1.html:42
 #: templates/staticpages/static_variant2.html:30
@@ -19,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-04 13:20+0100\n"
+"POT-Creation-Date: 2020-11-04 19:58+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -105,7 +102,8 @@ msgid "Keyword"
 msgstr ""
 
 #: projects/models.py:75 publications/models.py:12
-#: templates/publications/article_publications_detail.html:15
+#: templates/publications/article_publications_detail.html:16
+#: templates/search_results.html:21
 msgid "Keywords"
 msgstr ""
 
@@ -146,6 +144,7 @@ msgid "Project"
 msgstr ""
 
 #: projects/models.py:266 templates/home.html:30
+#: templates/search_results.html:12
 msgid "Projects"
 msgstr ""
 
@@ -185,23 +184,23 @@ msgstr ""
 msgid "Project primary audience."
 msgstr ""
 
-#: projects/models.py:526
+#: projects/models.py:520
 msgid "Project Entry"
 msgstr ""
 
-#: projects/models.py:527
+#: projects/models.py:521
 msgid "Project Entries"
 msgstr ""
 
-#: projects/models.py:604
+#: projects/models.py:598
 msgid "Project Submission"
 msgstr ""
 
-#: projects/models.py:605
+#: projects/models.py:599
 msgid "Project Submissions"
 msgstr ""
 
-#: projects/models.py:631 projects/models.py:632
+#: projects/models.py:625 projects/models.py:626
 msgid "Project External"
 msgstr ""
 
@@ -254,7 +253,7 @@ msgid "Pages"
 msgstr ""
 
 #: staticpages/models.py:42
-#: templates/publications/article_publications_detail.html:11
+#: templates/publications/article_publications_detail.html:12
 msgid "Authors"
 msgstr "Författare"
 
@@ -412,7 +411,6 @@ msgid "Forgot Password?"
 msgstr "Glömt lösenord?"
 
 #: templates/account/login.html:41 templates/base.html:162
-#: templates/search_results.html:147
 msgid "Login"
 msgstr ""
 
@@ -534,7 +532,7 @@ msgid "Set Password"
 msgstr ""
 
 #: templates/account/signup.html:5 templates/base.html:166
-#: templates/search_results.html:137 templates/socialaccount/signup.html:5
+#: templates/socialaccount/signup.html:5
 msgid "Signup"
 msgstr ""
 
@@ -602,56 +600,50 @@ msgid ""
 "mail address</a>."
 msgstr ""
 
-#: templates/base.html:11 templates/search_results.html:11
+#: templates/base.html:11
 msgid "Medborgarforskning.se - The Swedish portal for citizen science."
 msgstr ""
 
 #: templates/base.html:40 templates/base.html:234
-#: templates/search_results.html:37 templates/search_results.html:216
 msgid ""
 "Facebook icon in the header linking to Medborgarforskning.se on Facebook"
 msgstr ""
 
 #: templates/base.html:46 templates/base.html:240
-#: templates/search_results.html:42 templates/search_results.html:221
 msgid ""
 "LinkedIn icon in the header linking to Medborgarforskning.se on LinkedIn"
 msgstr ""
 
 #: templates/base.html:52 templates/base.html:246
-#: templates/search_results.html:47 templates/search_results.html:226
 msgid ""
 "Instagram icon in the header linking to Medborgarforskning.se on Instagram"
 msgstr ""
 
 #: templates/base.html:59 templates/base.html:253
-#: templates/search_results.html:52 templates/search_results.html:231
 msgid "Twitter icon in the header linking to Medborgarforskning.se on Twitter"
 msgstr ""
 
-#: templates/base.html:69 templates/search_results.html:61
+#: templates/base.html:69
 msgid "Medborgarforskning.se Logo linking to the site homepage"
 msgstr ""
 
-#: templates/base.html:79 templates/search_results.html:69
+#: templates/base.html:79
 msgid "Globe icon for switching languages"
 msgstr ""
 
-#: templates/base.html:117 templates/search_results.html:101
+#: templates/base.html:117
 msgid "Ear icon to launch text to speech of the current page"
 msgstr ""
 
 #: templates/base.html:130 templates/base.html:156
-#: templates/search_results.html:113 templates/search_results.html:123
-#: templates/search_results.html:135 templates/search_results.html:145
 msgid "Profile icon for login and account details"
 msgstr ""
 
 #: templates/base.html:140
 msgid "Users"
-msgstr ""
+msgstr "Användare"
 
-#: templates/base.html:144 templates/search_results.html:125
+#: templates/base.html:144
 msgid "Logout"
 msgstr "Logga ut"
 
@@ -663,49 +655,49 @@ msgstr "Inaktivt konto"
 
 #: templates/base.html:188
 msgid "Messages"
-msgstr ""
+msgstr "Meddelanden"
 
-#: templates/base.html:198 templates/search_results.html:181
+#: templates/base.html:198
 msgid "Medborgarforskning.se!"
 msgstr ""
 
-#: templates/base.html:199 templates/search_results.html:182
+#: templates/base.html:199
 msgid "This base.html block should be replaced by a template defined block."
 msgstr ""
 
-#: templates/base.html:212 templates/search_results.html:199
+#: templates/base.html:212
 msgid "ABOUT US"
 msgstr "OM OSS"
 
-#: templates/base.html:216 templates/search_results.html:200
+#: templates/base.html:216
 msgid "PRESS"
 msgstr "PRESS"
 
-#: templates/base.html:220 templates/search_results.html:201
+#: templates/base.html:220
 msgid "CONTACT"
 msgstr "KONTAKT"
 
-#: templates/base.html:227 templates/search_results.html:210
+#: templates/base.html:227
 msgid "Follow medborgarforskning.se"
 msgstr "Följ medborgarforskning.se"
 
-#: templates/base.html:306 templates/search_results.html:276
+#: templates/base.html:306
 msgid "Terms of service"
 msgstr "Användarvillkor"
 
-#: templates/base.html:311 templates/search_results.html:285
+#: templates/base.html:311
 msgid "Privacy policy"
 msgstr "Integritetspolicy"
 
-#: templates/base.html:316 templates/search_results.html:293
+#: templates/base.html:316
 msgid "Cookies policy"
 msgstr "Kakpolicy"
 
-#: templates/base.html:321 templates/search_results.html:302
+#: templates/base.html:321
 msgid "License"
 msgstr "Licens"
 
-#: templates/base.html:328 templates/search_results.html:310
+#: templates/base.html:328
 msgid "Powered by: The ARCS open source platform"
 msgstr "Powered by: The ARCS open source platform"
 
@@ -766,6 +758,18 @@ msgid ""
 "not a researcher, you can do exactly the same things as the researchers. "
 "Citizen science is for everyone."
 msgstr ""
+"Välkommen till medborgarforskning.se - den svenska portalen för dig som är "
+"intresserad av att lära dig mer om medborgarforskning, för dig som redan "
+"medborgarforskar och för dig som vill börja. Medborgarforskning betyder att "
+"forskare och medborgare samarbetar på olika sätt för att skapa kunskap. På "
+"medborgarforskning.se kan vem som helst lära sig mer om detta och hitta "
+"projekt och samarbeten för att bidra med sina kunskaper och erfarenheter. "
+"Som forskare kan du hitta information om medborgarforskningens metoder och "
+"få tips och inspiration till att starta ett eget projekt, utbyta "
+"erfarenheter och nätverka med andra forskare och volonärer. Om du redan har "
+"ett befintligt projekt kan du även använda portalen för att nå nya "
+"målgrupper. Även om du inte är forskare på ett lärosäte kan du använda "
+"portalen på samma sätt. Medborgarforskning är för alla!"
 
 #: templates/home.html:32
 msgid ""
@@ -778,6 +782,14 @@ msgid ""
 "children or adults). On the project pages you will find more information "
 "about what is involved as well as contact information for the organizer."
 msgstr ""
+"Vår databas på medborgarforskning.se innehåller projekt som är på gång i "
+"Sverige. Du kan låta dig bli inspirerad eller börja bidra till något av "
+"projekten idag! Men databasen innehåller även internationella projekt från "
+"runt om i världen. Genom att använda våra sökfilter kan du du enkelt hitta "
+"medborgarforskningsprojekt efter ämne, plats eller efter specifika "
+"målgrupper. Du kan även hitta kontaktinformation till varje projekt så att "
+"du enkelt kan hitta det som passar dig. "
+
 
 #: templates/home.html:40
 msgid "Project: Faunaväkteri"
@@ -785,7 +797,7 @@ msgstr "Projekt: Faunaväkteri"
 
 #: templates/home.html:66
 msgid "First slide"
-msgstr ""
+msgstr "Första"
 
 #: templates/home.html:68 templates/home.html:83 templates/home.html:98
 msgid "PROJECT FOCUS: Fauna and insects"
@@ -801,15 +813,15 @@ msgstr ""
 
 #: templates/home.html:81
 msgid "Second slide"
-msgstr ""
+msgstr "Andra"
 
 #: templates/home.html:96
 msgid "Third slide"
-msgstr ""
+msgstr "Tredje"
 
 #: templates/home.html:120
 msgid "Get involved with CitSciSE"
-msgstr ""
+msgstr "Bli involverad"
 
 #: templates/home.html:123
 msgid ""
@@ -820,11 +832,11 @@ msgstr ""
 
 #: templates/home.html:130
 msgid "Data Quality"
-msgstr ""
+msgstr "Datakvalitet"
 
 #: templates/home.html:131
 msgid "Getting Started"
-msgstr ""
+msgstr "Kom igång"
 
 #: templates/home.html:132
 msgid ""
@@ -832,31 +844,31 @@ msgid ""
 "is the data of sufficient quality. Fundamental readings and resources on "
 "Data Quality, Data Standards and Technologies have been compiled in the "
 "resources to help address your question."
-msgstr ""
+msgstr "Den första frågan som dyker upp när det kommer till medborgarforskning brukar vara datakvalitet."
 
 #: templates/home.html:136
 msgid "Data Quality Standards"
-msgstr ""
+msgstr "Datakvalitet"
 
 #: templates/home.html:141
 msgid "Papers"
-msgstr ""
+msgstr "Artiklar"
 
 #: templates/home.html:142
 msgid "Recent papers"
-msgstr ""
+msgstr "Nyligen publicerade artiklar"
 
 #: templates/home.html:148
 msgid "CitSciSE Community"
-msgstr ""
+msgstr "CitSciSE gemenskap"
 
 #: templates/home.html:149
 msgid "Recent Blog Posts"
-msgstr ""
+msgstr "Nya bloggposter"
 
 #: templates/nav_main.html:16
 msgid "Getting Started With Citizen Science"
-msgstr ""
+msgstr "Kom igång med medborgarforskning"
 
 #: templates/nav_main.html:39
 msgid "Knowledge base"
@@ -884,81 +896,81 @@ msgstr "Lägg till ditt projekt"
 
 #: templates/nav_main.html:63
 msgid "List of contributors"
-msgstr ""
+msgstr "Lista över användare"
 
 #: templates/nav_main.html:71
 msgid "Language"
-msgstr ""
+msgstr "Språk"
 
 #: templates/openid/login.html:9
 msgid "OpenID Sign In"
 msgstr "OpenID logga in"
 
 #: templates/projects/copy card.html:15
-#: templates/projects/project_detail.html:40
-#: templates/projects/project_list.html:89
+#: templates/projects/project_detail.html:39
+#: templates/projects/project_list.html:89 templates/search_results.html:44
 #: templates/users/private_profile_view.html:37
 #: templates/users/private_profile_view.html:98
 #: templates/users/private_profile_view.html:154
 msgid "Responsive image"
-msgstr ""
+msgstr "Responsiv bild"
 
-#: templates/projects/project_detail.html:33
+#: templates/projects/project_detail.html:32
 #, python-format
 msgid "Bild för projektet %(object.name)s"
 msgstr ""
 
-#: templates/projects/project_detail.html:61
+#: templates/projects/project_detail.html:60
 msgid "Project information"
 msgstr "Projektinformation"
 
-#: templates/projects/project_detail.html:65
+#: templates/projects/project_detail.html:64
 msgid "PROJECT AIM:"
 msgstr ""
 
-#: templates/projects/project_detail.html:73
+#: templates/projects/project_detail.html:72
 msgid "PROJECT DESCRIPTION:"
 msgstr ""
 
-#: templates/projects/project_detail.html:78
+#: templates/projects/project_detail.html:77
 msgid "PROJECT STATUS:"
 msgstr ""
 
-#: templates/projects/project_detail.html:84
+#: templates/projects/project_detail.html:83
 msgid "PROJECT TARGET AUDIENCE:"
 msgstr ""
 
-#: templates/projects/project_detail.html:89
+#: templates/projects/project_detail.html:88
 msgid "PROJECT RECORD LAST UPDATED:"
 msgstr ""
 
-#: templates/projects/project_detail.html:94
+#: templates/projects/project_detail.html:93
 msgid "MEDIA LINKS:"
 msgstr ""
 
-#: templates/projects/project_detail.html:100
+#: templates/projects/project_detail.html:99
 msgid "Contact information"
-msgstr ""
+msgstr "Information"
+
+#: templates/projects/project_detail.html:100
+msgid "NAME:"
+msgstr "Namn"
 
 #: templates/projects/project_detail.html:101
-msgid "NAME:"
-msgstr ""
-
-#: templates/projects/project_detail.html:102
 msgid "CONTACT'S ROLE:"
 msgstr ""
 
-#: templates/projects/project_detail.html:103
+#: templates/projects/project_detail.html:102
 msgid "AFFILIATION:"
-msgstr ""
+msgstr "Affiliering"
+
+#: templates/projects/project_detail.html:103
+msgid "CONTACT EMAIL:"
+msgstr "Mejl"
 
 #: templates/projects/project_detail.html:104
-msgid "CONTACT EMAIL:"
-msgstr ""
-
-#: templates/projects/project_detail.html:105
 msgid "CONTACT PHONE:"
-msgstr ""
+msgstr "Telefonnummer"
 
 #: templates/projects/project_list.html:16
 msgid "Science type"
@@ -975,7 +987,8 @@ msgstr "sorterad efter"
 #: templates/projects/project_submissionform.html:107
 msgid ""
 "Your account and email will be associated with this submission for follow-up."
-msgstr "Ditt konto och e-post kommer att sparas så att vi kan göra uppföljningar."
+msgstr ""
+"Ditt konto och e-post kommer att sparas så att vi kan göra uppföljningar."
 
 #: templates/projects/project_submissionform.html:468
 msgid "Plese sign in or create an account to add a project."
@@ -984,7 +997,8 @@ msgstr "Vänligen logga in eller skapa ett konto för att lägga till ett projek
 #: templates/projects/project_submissionform.html:469
 msgid ""
 "To submit a project you'll be asked to provide the following information."
-msgstr "För att lägga till ett projekt kommer du att ange följande information."
+msgstr ""
+"För att lägga till ett projekt kommer du att ange följande information."
 
 #: templates/projects/project_submissionform.html:471
 msgid "A common name for identifying the project."
@@ -1021,25 +1035,65 @@ msgid ""
 "science assessment criteria for visiblity and exchange."
 msgstr "Efter projektet lagtstill kommer det att granskas innan det publiceras"
 
-#: templates/publications/article_publications_detail.html:12
+#: templates/publications/article_publications_detail.html:13
 msgid "Publication Year"
 msgstr "Publikationsår"
 
-#: templates/publications/article_publications_detail.html:13
+#: templates/publications/article_publications_detail.html:14
 msgid "Journal"
 msgstr "Tidskrift"
 
-#: templates/publications/article_publications_detail.html:14
+#: templates/publications/article_publications_detail.html:15
 msgid "Volume/Issue"
 msgstr "Volym/utgåva"
 
-#: templates/publications/article_publications_detail.html:21
+#: templates/publications/article_publications_detail.html:22
 msgid "Abstract"
 msgstr "Abstract"
+
+#: templates/publications/article_publications_detail.html:36
+msgid "Article id is"
+msgstr "Artikelns id är"
+
+#: templates/publications/article_publications_detail.html:37
+msgid "This part is only for admin. No other user will be able to access it"
+msgstr "Detta är admin only."
 
 #: templates/publications/article_publications_list.html:8
 msgid "Search publications on citizen science"
 msgstr "Sök vetenskapliga artiklar om medborgarforskning"
+
+#: templates/publications/article_publications_list.html:9
+msgid "For example: bird"
+msgstr "Till exempel: bird"
+
+#: templates/publications/article_publications_list.html:13
+msgid "General search"
+msgstr "Supersök"
+
+#: templates/publications/article_publications_list.html:15
+#, fuzzy
+#| msgid "Authors"
+msgid "Author search"
+msgstr "Författare"
+
+#: templates/publications/article_publications_list.html:17
+#, fuzzy
+#| msgid "keywords"
+msgid "Keyword search"
+msgstr "nyckelord"
+
+#: templates/publications/article_publications_list.html:25
+msgid "Sort by year"
+msgstr "Sortera efter år"
+
+#: templates/publications/article_publications_list.html:27
+msgid "Sort by title"
+msgstr "Sortera efter titel"
+
+#: templates/publications/article_publications_list.html:29
+msgid "Sort by author"
+msgstr "Sortera efter författare"
 
 #: templates/publications/search_publications_results.html:6
 msgid "Search results:"
@@ -1058,20 +1112,50 @@ msgid "Milliseconds"
 msgstr "Millisekunder"
 
 #: templates/publications/search_publications_results.html:12
+#: templates/search_results.html:90
 msgid "Volume:"
 msgstr "Volym"
 
 #: templates/publications/search_publications_results.html:12
+#: templates/search_results.html:90
 msgid "Issue:"
 msgstr "Utgåva"
 
 #: templates/publications/search_publications_results.html:13
+#: templates/search_results.html:91
 msgid "Fulltext"
 msgstr "Fulltext"
 
-#: templates/search_results.html:202
-msgid "For Developers-API"
-msgstr ""
+#: templates/search_results.html:15
+#, fuzzy
+#| msgid "Publication Year"
+msgid "Publications"
+msgstr "Publikationsår"
+
+#: templates/search_results.html:18
+#: templates/workpackages/workpackages_list.html:35 workpackages/models.py:33
+msgid "Theme"
+msgstr "Tema"
+
+#: templates/search_results.html:28
+msgid "Related Projects:"
+msgstr "Relaterace projekt:"
+
+#: templates/search_results.html:85
+#, fuzzy
+#| msgid "Related publications"
+msgid "Related Publications:"
+msgstr "Relaterade publikationer"
+
+#: templates/search_results.html:96
+#, fuzzy
+#| msgid "Selected theme:"
+msgid "Related Theme:"
+msgstr "Valt tema"
+
+#: templates/search_results.html:102
+msgid "Related Keywords:"
+msgstr "Relaterade nyckelord:"
 
 #: templates/socialaccount/authentication_error.html:5
 #: templates/socialaccount/authentication_error.html:8
@@ -1161,11 +1245,12 @@ msgstr "Nyckelord:"
 #: templates/workpackages/theme_view.html:53
 msgid ""
 "Lägg till nyckelord, gärna med översättnig i motsvarande fält på samma rad"
-msgstr "Lägg till nyckelord, gärna med översättnig i motsvarande fält på samma rad"
+msgstr ""
+"Lägg till nyckelord, gärna med översättnig i motsvarande fält på samma rad"
 
 #: templates/workpackages/theme_view.html:69
-msgid "Swedish "
-msgstr "Svenska"
+msgid "Svenska"
+msgstr ""
 
 #: templates/workpackages/theme_view.html:71
 msgid "Engelska"
@@ -1175,26 +1260,25 @@ msgstr "Engelska"
 msgid "Selected theme:"
 msgstr "Valt tema"
 
-#: templates/workpackages/workpackages_list.html:35 workpackages/models.py:33
-msgid "Theme"
-msgstr "Tema"
-
 #: templates/workpackages/workpackages_list.html:35
 msgid "keywords"
 msgstr "nyckelord"
 
 #: templates/workpackages/workpackages_list.html:40
 msgid "Publications referencing this theme:"
-msgstr ""
+msgstr "Publikationer som hänvisas till i detta tema"
 
 #: workpackages/models.py:12
 msgid "Work package"
-msgstr ""
+msgstr "Arbetspaket"
 
 #: workpackages/models.py:13
 msgid "Work packages"
-msgstr ""
+msgstr "Arbetspaket"
 
 #: workpackages/models.py:34
 msgid "Themes"
-msgstr ""
+msgstr "Teman"
+
+#~ msgid "Swedish "
+#~ msgstr "Svenska"
