--- a/ArcsSystem/locale/sv/LC_MESSAGES/django.po
+++ b/ArcsSystem/locale/sv/LC_MESSAGES/django.po
@@ -957,7 +957,7 @@ msgstr "Publikationsår"
 
 #: templates/nav_main.html:50
 msgid "Citizen Science in Sweden"
-msgstr "Medborgarforskning i Sverige"
+msgstr "Medborgar-\nforskning i Sverige"
 
 #: templates/nav_main.html:53
 msgid "Citizen Science Projects"
@@ -1420,7 +1420,7 @@ msgstr "Teman"
 #~ msgstr "MEDBORGARFORSKNING I PRAKTIKEN"
 
 #~ msgid "CITIZEN SCIENCE IN SWEDEN"
-#~ msgstr "MEDBORGARFORSKNING I SVERIGE"
+#~ msgstr "MEDBORGAR-\nFORSKNING I SVERIGE"
 
 #~ msgid "Hi"
 #~ msgstr "Hej"
