--- a/ArcsSystem/data/API requests/EUapiRequests.ipynb
+++ b/ArcsSystem/data/API requests/EUapiRequests.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
